# kmms

./: .gitignore
2025_09_25_cpp-compilation/: main.cpp
2025_12_16_main_project/projects/: CMakeLists.txt
2025_12_16_main_project/projects/bubble_sort/: CMakeLists.txt  compile.bat  io.cpp  io.hpp  main.cpp  sort.cpp  sort.hpp
2025_12_16_main_project/projects/bubble_sort_mf/: compile_mf.bat  main.cpp
2025_12_16_main_project/projects/bubble_sort_mf/sortings/: bubble_sort.cpp  bubble_sort.hpp
2025_12_16_main_project/projects/mega_vector_ultra_list/: CMakeLists.txt
2025_12_16_main_project/projects/mega_vector_ultra_list/src/: CMakeLists.txt  doubly_linked_list.cpp  doubly_linked_list.hpp  vector.cpp  vector.hpp
2025_12_16_main_project/projects/mega_vector_ultra_list/test/: CmakeLists.txt  run_mega_vector_ultra_list.bat  templates_doubly_linked_list.cpp  templates_vector.cpp  test_doubly_linked_list.cpp  test_vector.cpp
2025_12_16_main_project/projects/obuchaika/: CMakeLists.txt  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp
2025_12_16_main_project/projects/super_puper_long_numbers/: CMakeLists.txt
2025_12_16_main_project/projects/super_puper_long_numbers/src/: CMakeLists.txt  super_puper_long_numbers.cpp  super_puper_long_numbers.hpp
2025_12_16_main_project/projects/super_puper_long_numbers/tests/: CMakeLists.txt  numbers_test.cpp  run_super_puper_long_numbers.bat
2025_12_16_main_project/projects/tests_example/: CMakeLists.txt
2025_12_16_main_project/projects/tests_example/src/: CMakeLists.txt  bubble_sort.cpp
(+59 files in other folders)
